<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.xyz.arodrigu46.xyzenterprise.Principal">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titulo_main"
        android:textAlignment="center"
        android:textSize="25sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="144dp"
        tools:layout_editor_absoluteY="16dp" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="46dp" />

    <Spinner
        android:id="@+id/cmbMaterial"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dije"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="87dp" />

    <Spinner
        android:id="@+id/cmbDije"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="104dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tipo"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="128dp" />

    <Spinner
        android:id="@+id/cmbTipo"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="145dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="426dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valor_a_pagar"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="423dp" />

    <TextView
        android:id="@+id/txtValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="192dp"
        tools:layout_editor_absoluteY="448dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/moneda"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="247dp" />

    <RadioGroup
        android:id="@+id/rb"
        android:layout_width="182dp"
        android:layout_height="123dp"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="269dp">

        <RadioButton
            android:id="@+id/rbcop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cop" />

        <RadioButton
            android:id="@+id/rbusd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/usd" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/unidades"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="169dp" />

    <EditText
        android:id="@+id/txtUnidades"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:textSize="15sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="186dp" />

</android.support.constraint.ConstraintLayout>
